--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -462,6 +462,7 @@
   "block.beemancer.honeyed_fence_gate": "Honeyed Fence Gate",
   "block.beemancer.honeyed_trapdoor": "Honeyed Trapdoor",
   "block.beemancer.honeyed_door": "Honeyed Door",
+  "block.beemancer.honeyed_button": "Honeyed Button",
   "block.beemancer.honeyed_stone_wall": "Honeyed Stone Wall",
   "block.beemancer.honeyed_glass": "Honeyed Glass",
   "block.beemancer.honeyed_glass_pane": "Honeyed Glass Pane",
