--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -461,6 +461,7 @@
   "block.beemancer.honeyed_fence_gate": "Portillon Miellé",
   "block.beemancer.honeyed_trapdoor": "Trappe Miellée",
   "block.beemancer.honeyed_door": "Porte Miellée",
+  "block.beemancer.honeyed_button": "Bouton Miellé",
   "block.beemancer.honeyed_stone_wall": "Muret en Pierre Miellée",
   "block.beemancer.honeyed_glass": "Verre Miellé",
   "block.beemancer.honeyed_glass_pane": "Vitre Miellée",
