--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -16,7 +16,6 @@
   "block.beemancer.crank": "Manivelle",
   "block.beemancer.powered_centrifuge": "Centrifugeuse Automatique",
   "block.beemancer.powered_centrifuge_tier2": "Centrifugeuse Automatique Tier 2",
-  "block.beemancer.powered_centrifuge_tier3": "Centrifugeuse Automatique Tier 3",
   "block.beemancer.honey_tank": "Réservoir de Miel",
   "block.beemancer.multiblock_tank": "Réservoir de Fluide",
   "block.beemancer.honey_pipe": "Tuyau de Miel",
@@ -28,11 +27,8 @@
   "block.beemancer.item_pipe_tier3": "Tuyau d'Items Tier 3",
   "block.beemancer.item_pipe_tier4": "Tuyau d'Items Tier 4",
   "block.beemancer.crystallizer": "Cristalliseur",
-  "block.beemancer.alembic": "Alambic",
   "block.beemancer.infuser": "Infuseur",
   "block.beemancer.infuser_tier2": "Infuseur Tier 2",
-  "block.beemancer.infuser_tier3": "Infuseur Tier 3",
-
   "fluid.beemancer.honey": "Miel",
   "fluid.beemancer.royal_jelly": "Gelée Royale",
   "fluid.beemancer.nectar": "Nectar",
@@ -495,6 +491,16 @@
   "block.beemancer.honey_reservoir": "Réservoir de Miel",
   "block.beemancer.altar_heart": "Coeur de l'Autel",
   "block.beemancer.hive_multiblock": "Bloc de Ruche",
+  "block.beemancer.alembic_heart": "Coeur d'Alambic",
+  "block.beemancer.infuser_heart": "Coeur d'Infuseur",
+  "block.beemancer.centrifuge_heart": "Coeur de Centrifugeuse",
+
+  "message.beemancer.alembic.formed": "L'Alambic a été formé !",
+  "message.beemancer.alembic.invalid_structure": "Structure invalide - vérifiez le pattern de l'alambic",
+  "message.beemancer.infuser.formed": "L'Infuseur a été formé !",
+  "message.beemancer.infuser.invalid_structure": "Structure invalide - vérifiez le pattern de l'infuseur",
+  "message.beemancer.centrifuge.formed": "La Centrifugeuse a été formée !",
+  "message.beemancer.centrifuge.invalid_structure": "Structure invalide - vérifiez le pattern de la centrifugeuse",
 
   "message.beemancer.honey_altar.formed": "L'Autel de Miel a été formé !",
   "message.beemancer.honey_altar.already_formed": "L'Autel de Miel est déjà actif",
